# kinect-fusion

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md
src/: NearestNeighbor.h  denoising.cpp  depth-to-vertex-and-normals.cpp  functions.h  main.cpp  raycast-tsdf.cpp  test.cpp
src/kernels/: vector-add.cl
src/misc/: Utils.cpp  Utils.h
src/opengl-helpers/: ShaderHelper.cpp  ShaderHelper.h  WindowHelper.cpp  WindowHelper.h  vertex.glsl
src/sensor/: Frame.h  MockSensor.cpp  MockSensor.h  Sensor.h
